fix CORS for frontend deployment